Make Cypher Neo4j 5 compatible.